# shortest_path_dijkstra

./: .gitignore  Makefile
backend/: pyproject.toml
backend/src/: main.py
backend/src/routes/: __init__.py  dijkstra.py
backend/src/schemas/: dijkstra_schema.py
backend/src/services/: dijkstra_service.py
docker/: backend.yaml  frontend.yaml
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/pages/: page.jsx
